--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,9 +17,9 @@
                 <ul class="dropdown-menu-container">
                     <% if (locals.isLogged) { %>
                         <li>
-                            <img src="/images/avatars/<%= locals.userLogged.avatar %>">
-                            <%= locals.userLogged.name %>
-                            </a>
+                            <img src="/images/avatars/<%= locals.userLogged.avatar %>"> 
+                            <span><%= locals.userLogged.name %></span>
+                            
                             <ul class="dropdown-menu">
                                 <li><a href="/users/profile">Mi perfil</a></li>
                                 <li><a href="/users/logout">Salir</a></li>
