fix: css de login, register y boton productos destacados

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,10 @@
     <section class="ind-top">
         <div class="slider">
             <ul>
-                <li><img src="/images/beerJar.jpg" alt="image slider" class="slider-img"></li>
-                <li><img src="/images/beerGlasses.jpg" alt="image slider" class="slider-img"></li>
-                <li><img src="/images/beerJar.jpg" alt="image slider" class="slider-img"></li>
-                <li><img src="/images/beerGlasses.jpg" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/presentacion2.png" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/presentacion1.png" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/presentacion4.png" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/presentacion3.png" alt="image slider" class="slider-img"></li>
             </ul>
         </div>
     </section>
@@ -23,12 +23,9 @@
         <div class="art-1">
             <img src="/Desing/Logo-Etiqueta-Originals/480x480original.png" alt="" > 
         </div>
-        <h3> CONOCÉ NUESTROS PRODUCTOS DESTACADOS</h3>
-            <h4 >   Sus caracteristicas y proceso de producción.</h4>
-                <h4 >  Los secretos de su cocina.</h4>
-        
+            
          <button class="lg-submit">
-         <a href="/productDetail"></a> Ingresá 
+         <a href="/productDetail"></a> Productos Destacados 
         </button>
     </div>
     </div>
