--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <section class="ind-top">
         <div class="slider">
             <ul>
-                <li><img src="/images/presentacion2.png" alt="image slider" class="slider-img"></li>
+                <li><img src="/images/presentacion5.png" alt="image slider" class="slider-img"></li>
                 <li><img src="/images/presentacion1.png" alt="image slider" class="slider-img"></li>
                 <li><img src="/images/presentacion4.png" alt="image slider" class="slider-img"></li>
                 <li><img src="/images/presentacion3.png" alt="image slider" class="slider-img"></li>
@@ -30,8 +30,8 @@
     </div>
     </div>
     <div class="right-content">
-        
-        <article class="art-3">
+            <article class="art-3">
+            <img src="/images/guarda.png" >
                 <p>Cuando abrimos una cerveza <i>CHEC</i>, hecha con Calidad y para todos los gustos, es seguramente porque  estamos disfrutando un momento de placer, solos o acompañados de familia, amigos y anécdotas para compartir. Compartiendo una picada, un asado o una buena comida. Mientras disfrutamos, se pierde nocion del tiempo y la sobremesa se hace mas extensa.</p>
                <h3> Un aplauso para el anfitrion, y <i>CHEC </i>  te asegura un próximo encuentro... <i class="fas fa-beer"> </i>  </h3>
         
