--- a/views/nuestrasRecetas.ejs
+++ b/views/nuestrasRecetas.ejs
@@ -7,9 +7,11 @@
     <body>
         <!-- Header-->
         <%- include("./partials/header") %>
-            <div class="nr-main-containter">
 
+            <div class="nr-main-containter">
+            
             <section class="nr-details-container">
+                <h5>Nombre</h5>
                 <div class="nr-information">
                     <h4>Básicos</h4>
                     <ul class="pd-beer-attributes">
@@ -73,21 +75,28 @@
                         </li>
                     </ul>
                 </div>
-
-
-
+                <div class="nr-tip-food-container">
+                <div class="nr-tip-food">
+                    <h4>Tip cervecero</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
+                </div>
+                <div class="nr-tip-food">
+                    <h4>Maridaje</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
+                </div>
+                </div>
             </section>
 
-            <section class="nr-process">
+            <section class="nr-process-container">
                 <h4>Nuestro proceso</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
                     odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
                     aliquam.</p>
-                </br>
+               
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
                     odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
                     aliquam.</p>
-                </br>
+                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
                     odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
                     aliquam.</p>
