--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,7 @@
                     <% if (locals.isLogged) { %>
                         <li>
                             <img src="/images/avatars/<%= locals.userLogged.avatar %>"> 
-                            <span><%= locals.userLogged.name %></span>
+                            <a><%= locals.userLogged.name %></a>
                             
                             <ul class="dropdown-menu">
                                 <li><a href="/users/profile">Mi perfil</a></li>
