--- a/views/nuestrasRecetas.ejs
+++ b/views/nuestrasRecetas.ejs
@@ -12,6 +12,7 @@
             
             <section class="nr-details-container">
                 <h5>Nombre</h5>
+                <div class="nr-information-container">
                 <div class="nr-information">
                     <h4>Básicos</h4>
                     <ul class="pd-beer-attributes">
@@ -50,11 +51,11 @@
                     <h4>Método y tiempos</h4>
                     <ul class="pd-beer-attributes">
                         <li>
-                            <h5>Macerado: </h5>
+                            <h6>Macerado: </h6>
                             <p>66° - 75 min.</p>
                         </li>
                         <li>
-                            <h5>Fermentación: </h5>
+                            <h6>Fermentación: </h6>
                             <p>19°</p>
                         </li>
                     </ul>
@@ -64,23 +65,24 @@
                     <h4>Ingredientes</h4>
                     <ul class="pd-beer-attributes">
                         <li>
-                            <h5>Maltas: </h5>
-                            <h6>Pale:</h6>
-                            <h6>Caramelo:</h6>
+                            <h6>Maltas: </h6>
+                            <p>Pale:</p>
                             <p>Caramelo:</p>
                         </li>
                         <li>
-                            <h5>Fermentación: </h5>
-                            <p>19°</p>
+                            <h6>Lúpulo/s: </h6>
+                            <p>Cascade:</p>
+                            <p>Chinook:</p>
                         </li>
                     </ul>
                 </div>
-                <div class="nr-tip-food-container">
-                <div class="nr-tip-food">
+                </div>
+                <div class="nr-tip-container">
+                <div class="nr-tip">
                     <h4>Tip cervecero</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
                 </div>
-                <div class="nr-tip-food">
+                <div class="nr-tip">
                     <h4>Maridaje</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
                 </div>
@@ -89,18 +91,30 @@
 
             <section class="nr-process-container">
                 <h4>Nuestro proceso</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
-                    odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
-                    aliquam.</p>
+                <p>MACERADO:
+                    El grano malteado y molido se mezcla con agua caliente en un proceso conocido como maceración. Al triturar parcialmente la malta antes de remojarla, el agua caliente puede entrar en cada grano individual para exponer los almidones naturales que contiene. Esto es lo que quiere el cervecero, ya que estos almidones se convierten en azúcares por las propias enzimas del grano. Son estos azúcares los que luego serán utilizados por la levadura como fuente de alimento para producir alcohol y dióxido de carbono
+                    </p>
                
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
-                    odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
-                    aliquam.</p>
+                <p>LAVADO: El siguiente paso es agregar más agua a la parte superior de la cama de granos y se deja filtrar, llevando consigo el dulce líquido azucarado.
+                    Esta etapa se realiza en la olla de maceración original o en un recipiente separado
+                    de filtrado. Cualquiera de los dos necesitará una base perforada para dejar escapar el líquido ya clarificado y así comenzar con el hervor del mosto.
+                    </p>
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus magni, eligendi ab in veritatis
-                    odit iure nulla suscipit, veniam officiis fuga quam aut distinctio sed ut excepturi, id aliquid
-                    aliquam.</p>
-                </br>
+                <p>HERVOR:
+                    Luego, el mosto se transfiere a otro recipiente grande conocido como hervidor y se calienta. El mosto hervirá aquí durante aproximadamente una hora (dependiendo del estilo que cocinemos).
+                    La etapa de ebullición también suele ser donde se agregan los lúpulos. A menudo,
+                    también agregamos lúpulo a la etapa de maduración para aumentar el perfil de sabor, pero casi todas las cervezas están lupuladas durante la ebullición. Al agregar lúpulo
+                    antes, se obtiene más amargor. Las adiciones posteriores aportan aroma y sabor.
+                </p>
+                <p>FERMENTACION: Una vez hecho el hervor, el mosto se enfría y se transfiere a un fermentador sanitizado y listo para inocular la levadura en el mosto ya enfriado.
+                    Este proceso durará unos días, hasta que la levadura metabolice las azúcares obtenidas en la maceración. Una vez alcanzada la densidad final enfriaremos la nuestra cerveza por aproximadamente 2 semanas más para lograr una clarificación ideal.
+                </p>
+                <p>EMBALAJE:
+                    Lo único que queda es llevarte la cerveza. En CHEC empaquetamos nuestra cerveza
+                    artesanal en latas y barriles. También utilizamos botellas recicladas.
+                    Ya que nuestra cerveza no posee conservantes ni está sometida al proceso de
+                    pasteurización aconsejamos que estén almacenadas en frio para evitar que se deteriore.
+                </p>
             </section>
 
             </div>
