inicio prueba CRUD nuestras recetas

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <ul class="left-navbar">                
             <li><a href="/">Home </a></li>
             <li><a href="/quienesSomos">Quienes somos </a></li>
-            <li><a href="/nuestrasRecetas">Nuestras Recetas </a></li>
+            <li><a href="/recetas/nuestrasRecetas">Nuestras Recetas </a></li>
         </ul>
         <ul class="rigth-navbar">
             <li>
