--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -9,49 +9,60 @@
         <%- include("../partials/header") %>
 
             <div class="nr-main-containter">
+                <!--Por acá quiero poner el for para que muestre agregar y modificar a los Admins solo-->
+                <!--pero me daba recetas is undefined y lo dejé porque primero quiero ver lo del id (ver comments abajo). -->
                 <% for (i=1;i< recetas.length;i++){%>
                     <article>
                         <div>
-                            <button class="pd-seleccionar"><%= recetas[i].name %></button>
+                            <button class="pd-seleccionar" value="recetas[i].id"><%= recetas[i].name %></button>
+                              <!-- Estos botones debern referenciar el id de la receta en i-->
                             <button class="pd-admin"></a>Modificar </i></a></button>
                         </div>
                     </article>
                 <%}%>
+                
                 <button class="pd-admin">Agregar receta</i></a></button>
+                
             <section class="nr-details-container">
-                <h5>Nombre</h5>
+                <h5><%= recetas[2].name %></h5>
+                 <!--Donde está el 2 debe ir "i" para desplegar la receta seleccionada-->
                 <div class="nr-information-container">
                 <div class="nr-information">
                     <h4>Básicos</h4>
                     <ul class="pd-beer-attributes">
                         <li>
                             <h6>Volumen: </h6>
-                            <p>20 lts.</p>
+                            <p><%= recetas[2].volume %> lts.</p>
                         </li>
                         <li>
                             <h6>Volumen de hervor: </h6>
-                            <p>2r lts.</p>
+                            <p><%= recetas[2].boilvolume %>lts.</p>
+                        </li>
+                        <li>
+                            <h6>Duración del hervor: </h6>
+                            <p><%= recetas[2].boilTime %>lts.</p>
                         </li>
                         <li>
                             <h6>Alcohol: </h6>
-                            <p>5%</p>
+                            <p><%= recetas[2].alcohol %> %</p>
                         </li>
                         <li>
-                            <h6>Densidad: </h6>
-                            <p>1053</p>
+                            <h6>Densidad final: </h6>
+                            <p><%= recetas[2].targetFG %></p>
                         </li>
                         <li>
-                            <h6>SRM: </h6>
-                            <p> 7 </p>
+                            <h6>Densidad inicial: </h6>
+                            <p><%= recetas[2].targetOG %></p>
                         </li>
                         <li>
-                            <h6>PH: </h6>
-                            <p> 4.4 </p>
+                            <h6>PH inicial: </h6>
+                            <p><%= recetas[2].initialPH %></p>
                         </li>
                         <li>
-                            <h6>Nivel de atenuación: </h6>
-                            <p> 78%</p>
+                            <h6>PH final: </h6>
+                            <p><%= recetas[2].finalPH %></p>
                         </li>
+                        
                     </ul>
                 </div>
 
@@ -60,11 +71,11 @@
                     <ul class="pd-beer-attributes">
                         <li>
                             <h6>Macerado: </h6>
-                            <p>66° - 75 min.</p>
+                            <p><%= recetas[2].mashTemp %>° - <%= recetas[2].mashTime %> min.</p>
                         </li>
                         <li>
                             <h6>Fermentación: </h6>
-                            <p>19°</p>
+                            <p><%= recetas[2].fermentationTemp %>°</p>
                         </li>
                     </ul>
                 </div>
@@ -73,14 +84,23 @@
                     <h4>Ingredientes</h4>
                     <ul class="pd-beer-attributes">
                         <li>
-                            <h6>Maltas: </h6>
-                            <p>Pale:</p>
-                            <p>Caramelo:</p>
+                            <h6>Maltas: </h6> </br>
+                            <p><%= recetas[2].malt1 %>: <%= recetas[2].malt1Amount %> </p></br>
+                            <p><%= recetas[2].malt2 %>: <%= recetas[2].malt2Amount %> </p></br>
+                            <p><%= recetas[2].malt3 %>: <%= recetas[2].malt3Amount %> </p></br>
+                            <p><%= recetas[2].malt4 %>: <%= recetas[2].malt4Amount %> </p></br>
+                            <p><%= recetas[2].malt5 %>: <%= recetas[2].malt5Amount %> </p></br>
                         </li>
                         <li>
                             <h6>Lúpulo/s: </h6>
-                            <p>Cascade:</p>
-                            <p>Chinook:</p>
+                            <p><%= recetas[2].hop1 %>: <%= recetas[2].hop1Amount %> <%= recetas[2].hop1Moment %> min.</p></br>
+                            <p><%= recetas[2].hop2 %>: <%= recetas[2].hop2Amount %> <%= recetas[2].hop2Moment %></p></br>
+                            <p><%= recetas[2].hop3 %>: <%= recetas[2].hop3Amount %> <%= recetas[2].hop3Moment %></p></br>
+                        </li>
+                        <li>
+                            <h6>Levadta: </h6> </br>
+                            <p><%= recetas[2].yeast %>: <%= recetas[2].yeastAmount %> gr. </p></br>
+                            
                         </li>
                     </ul>
                 </div>
@@ -88,11 +108,11 @@
                 <div class="nr-tip-container">
                 <div class="nr-tip">
                     <h4>Tip cervecero</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
+                    <p><%= recetas[2].brewerTip %></p>
                 </div>
                 <div class="nr-tip">
                     <h4>Maridaje</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur, dicta saepe sint obcaecati eveniet tempora? Eaque voluptatum debitis adipisci earum impedit, dolor recusandae assumenda consequatur ex, mollitia dicta perspiciatis alias!</p>
+                    <p><%= recetas[2].foodPairing %></p>
                 </div>
                 </div>
             </section>
