agrego nuetras recetas funcionando. Faltan sus  css

--- a/views/recetas/nuestrasRecetas.ejs
+++ b/views/recetas/nuestrasRecetas.ejs
@@ -26,7 +26,7 @@
     <script>
         function display(id){  // (id)
             document.getElementById('receta-container' + id).style.display = "block";
-            console.log("prueba desde display")
+            
         }
         function hide(id){   // (id)
             document.getElementById('receta-container' + id).style.display = "none";
@@ -54,9 +54,9 @@
                     <% if (datos.userLogged && datos.userLogged.userRole=="Admin" ){ %>
                         <button class="pd-admin"></a>Modificar </i></a></button>
                     <%}%>
-                            <button id="display-hide-btn<%= datos.recetas[i].id %>" onclick="display(datos.recetas[i].id);">Desplegar</button>
+                            <button id="display-hide-btn<%= datos.recetas[i].id %>" onclick="display('<%= datos.recetas[i].id %>');">Desplegar</button>
                             <div id="receta-container<%= datos.recetas[i].id %>" class="receta-container">
-                            <button id="display-hide-btn<%= datos.recetas[i].id %>"  onclick="hide(datos.recetas[i].id)">Ocultar</button>
+                            <button id="display-hide-btn<%= datos.recetas[i].id %>"  onclick="hide('<%= datos.recetas[i].id %>')">Ocultar</button>
                                 <div class="nr-information-container">
                                     <div class="nr-information">
                                         <h4>Básicos</h4>
